--- a/handbook.ipynb
+++ b/handbook.ipynb
@@ -270,7 +270,7 @@
    "metadata": {},
    "source": [
     "The consensus algorithm is a key component of blockchain technology. It ensures that all participants in the network agree on the state of the blockchain, preventing malicious actors from tampering with the data.\n",
-    "There is two main types of consensus algorithm: committee-based (~\"Proof of Stake\") and Nakamoto-style (~\"Proof of Work\")."
+    "We focus on committee-based consensus algorithm (~\"Proof of Stake\")."
    ]
   },
   {
@@ -285,27 +285,6 @@
     "        \"Transactions\": empty\n",
     "    })\n",
     "cosmos.display()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "pow = NakamotoConsensus()\n",
-    "bitcoin = Blockchain(\"Bitcoin Blockchain\", {\n",
-    "        \"Consensus\": pow,\n",
-    "        \"Transactions\": empty\n",
-    "    })\n",
-    "bitcoin.display()"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "The difference between these two types of consensus algorithms lies in how they achieve agreement among participants. Committee-based algorithms rely on a small group of trusted nodes to validate transactions, while Nakamoto-style algorithms relies on the longest (heaviest) chain rule. Because a block agreed by a committee can never be revoked, Committee-based blockchains have immediate finality but because Nakamoto-style blockchains can be reverted, they have only probabilistic finality. We will only consider Committee-based blockchains in this tutorial."
    ]
   },
   {
@@ -377,8 +356,8 @@
     "        \"Transactions\": empty\n",
     "    })\n",
     "distributed_federated_learning = FederatedLearning(\"Distributed Federated Learning\", {\n",
-    "        \"Aggregation\": blockchain,\n",
-    "        \"Models Storage\": blockchain\n",
+    "        \"Aggregation\": empty,\n",
+    "        \"Models Storage\": empty\n",
     "    })\n",
     "distributed_federated_learning.display()"
    ]
@@ -468,8 +447,51 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "This system is unavailable, as we cannot guarantee that the data stored is kept by a server that is alive.\n",
-    "This is problematic when combined with a blockchain, because clients may never receive the new model they need to train.\n",
+    "Where should all these data be stored?"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "storage_possibilities = [\"on-chain\", \"off-chain\"]\n",
+    "storage_clients_updates = \"\"\n",
+    "storage_new_model = \"\""
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Implement store_offchain and verify_offchain to ensure that the off-chain data is tamper-proof and can be trusted."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def store_offchain(data, hash, add_transaction):\n",
+    "    return \"TODO\"\n",
+    "\n",
+    "def verify_offchain(data, hash, read_blockchain):\n",
+    "    return \"TODO\""
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### Limitations"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "Try to see what happens when you use a blockchain based Federated Learning system with an off-chain data storage system."
    ]
   },
@@ -490,16 +512,48 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "We can provide the missing properties using availability and integrity proofs (PoA&I). These proofs are stored on the blockchain."
+    "We can trust the off-chain data thanks to anchoring. But do you see another problem?"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
-    "poai = Component(\"POAI\", [\"data-available\"]) # POAI -> Certificate"
+    "def problem():\n",
+    "    return \"TODO\""
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### 5. Final Solution"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### Properties"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Let's combine everything together. We can provide the missing properties using availability and integrity proofs (certificates). These proofs are stored on the blockchain. But who should produce the certificates? The clients, the model owners, the validators, or the aggregators?"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "actors = [\"clients\", \"model owners\", \"validators\", \"aggregators\"]\n",
+    "certificates_producers = []"
    ]
   },
   {
@@ -515,17 +569,19 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "poai_blockchain = Blockchain(\"POAI Blockchain\", {\n",
-    "        \"Consensus\": empty, # leave empty\n",
-    "        \"Transactions\": poai\n",
-    "    })\n",
-    "poai_blockchain.display()\n",
+    "certificates = Component(\"Certification\", [\"data-available\"])\n",
     "\n",
-    "poai_fl = FederatedLearning(\"POAI Federated Learning\", {\n",
+    "certificates_blockchain = Blockchain(\"Blockchain with Certificates\", {\n",
+    "        \"Consensus\": empty, # leave empty\n",
+    "        \"Transactions\": empty\n",
+    "    })\n",
+    "certificates_blockchain.display()\n",
+    "\n",
+    "certificates_fl = FederatedLearning(\"Certified Federated Learning\", {\n",
     "        \"Aggregation\": empty,\n",
     "        \"Models Storage\": empty\n",
     "    })\n",
-    "poai_fl.display()"
+    "certificates_fl.display()"
    ]
   },
   {
@@ -546,7 +602,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "We split the implementations in two parts: retreive_data, when a server gets the data from the off-chain storage system, and make_poai, when a server creates the proof of availability and integrity. f is a bound on the number of server that can crash, so if we receive a signature from at least f+1 servers, we can be sure that the data is available and not tampered with..."
+    "We split the implementations in two parts: retreive_data, when someone gets the data from the off-chain storage system, and make_certificate, when someone creates the proof of availability and integrity. f is a bound on the number of server that can crash, so if we receive a signature from at least f+1 servers, we can be sure that the data is available and not tampered with..."
    ]
   },
   {
@@ -558,15 +614,8 @@
     "def retreive_data(data, hash, sign, send):\n",
     "    return \"TODO\"\n",
     "\n",
-    "def make_poai(data, hash, receive, f):\n",
+    "def make_certificate(data, hash, receive, f):\n",
     "    return \"TODO\""
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "### 5. Final Solution"
    ]
   }
  ],
